# RSDKv5-Decompilation

./: CMakeLists.txt
RSDKv5/: RSDKv5.icns
RSDKv5/RSDK/Audio/: Audio.cpp  Audio.hpp
RSDKv5/RSDK/Audio/Legacy/: AudioLegacy.cpp  AudioLegacy.hpp
RSDKv5/RSDK/Audio/MiniAudio/: MiniAudioDevice.cpp  MiniAudioDevice.hpp
RSDKv5/RSDK/Audio/NX/: NXAudioDevice.cpp  NXAudioDevice.hpp
RSDKv5/RSDK/Audio/Oboe/: OboeAudioDevice.cpp  OboeAudioDevice.hpp
RSDKv5/RSDK/Audio/PortAudio/: PortAudioDevice.cpp  PortAudioDevice.hpp
RSDKv5/RSDK/Audio/SDL2/: SDL2AudioDevice.cpp  SDL2AudioDevice.hpp
RSDKv5/RSDK/Audio/SDL3/: SDL3AudioDevice.cpp  SDL3AudioDevice.hpp
RSDKv5/RSDK/Core/: Link.cpp  Link.hpp  Math.cpp  Math.hpp  ModAPI.cpp  ModAPI.hpp  Reader.cpp  Reader.hpp  RetroEngine.cpp  RetroEngine.hpp
RSDKv5/RSDK/Core/Legacy/: ModAPILegacy.cpp  ModAPILegacy.hpp  RetroEngineLegacy.cpp  RetroEngineLegacy.hpp
RSDKv5/RSDK/Core/Legacy/v3/: RetroEnginev3.cpp  RetroEnginev3.hpp
RSDKv5/RSDK/Core/Legacy/v4/: RetroEnginev4.cpp  RetroEnginev4.hpp
RSDKv5/RSDK/Dev/: Debug.cpp  Debug.hpp  DevFont.hpp
RSDKv5/RSDK/Graphics/: Animation.cpp  Animation.hpp  Drawing.cpp  Drawing.hpp  Palette.cpp  Palette.hpp  Scene3D.cpp  Scene3D.hpp  Sprite.cpp  Sprite.hpp  Video.cpp  Video.hpp
RSDKv5/RSDK/Graphics/DX11/: DX11RenderDevice.cpp  DX11RenderDevice.hpp
RSDKv5/RSDK/Graphics/DX9/: DX9RenderDevice.cpp  DX9RenderDevice.hpp
RSDKv5/RSDK/Graphics/EGL/: EGLRenderDevice.cpp  EGLRenderDevice.hpp
RSDKv5/RSDK/Graphics/GLFW/: GLFWRenderDevice.cpp  GLFWRenderDevice.hpp
RSDKv5/RSDK/Graphics/Legacy/: AnimationLegacy.cpp  AnimationLegacy.hpp  DrawingLegacy.cpp  DrawingLegacy.hpp  PaletteLegacy.cpp  PaletteLegacy.hpp  Scene3DLegacy.cpp  Scene3DLegacy.hpp  SpriteLegacy.cpp  SpriteLegacy.hpp
RSDKv5/RSDK/Graphics/Legacy/v3/: DrawingLegacyv3.cpp  DrawingLegacyv3.hpp  Scene3DLegacyv3.cpp  Scene3DLegacyv3.hpp
RSDKv5/RSDK/Graphics/Legacy/v4/: DrawingLegacyv4.cpp  DrawingLegacyv4.hpp  Scene3DLegacyv4.cpp  Scene3DLegacyv4.hpp
RSDKv5/RSDK/Graphics/SDL2/: SDL2RenderDevice.cpp  SDL2RenderDevice.hpp
RSDKv5/RSDK/Graphics/SDL3/: SDL3RenderDevice.cpp  SDL3RenderDevice.hpp
RSDKv5/RSDK/Graphics/Vulkan/: VulkanRenderDevice.cpp  VulkanRenderDevice.hpp
RSDKv5/RSDK/Input/: Input.cpp  Input.hpp
RSDKv5/RSDK/Input/GLFW/: GLFWInputDevice.cpp  GLFWInputDevice.hpp
RSDKv5/RSDK/Input/Keyboard/: KBInputDevice.cpp  KBInputDevice.hpp
RSDKv5/RSDK/Input/SDL2/: SDL2InputDevice.cpp  SDL2InputDevice.hpp
RSDKv5/RSDK/Input/SDL3/: SDL3InputDevice.cpp  SDL3InputDevice.hpp
RSDKv5/RSDK/Scene/: Collision.cpp  Collision.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp
RSDKv5/RSDK/Scene/Legacy/: ObjectLegacy.cpp  ObjectLegacy.hpp  SceneLegacy.cpp  SceneLegacy.hpp
RSDKv5/RSDK/Scene/Legacy/v3/: CollisionLegacyv3.cpp  CollisionLegacyv3.hpp  ObjectLegacyv3.cpp  ObjectLegacyv3.hpp  PlayerLegacyv3.cpp  PlayerLegacyv3.hpp  SceneLegacyv3.cpp  SceneLegacyv3.hpp  ScriptLegacyv3.cpp  ScriptLegacyv3.hpp
RSDKv5/RSDK/Scene/Legacy/v4/: CollisionLegacyv4.cpp  CollisionLegacyv4.hpp  ObjectLegacyv4.cpp  ObjectLegacyv4.hpp  SceneLegacyv4.cpp  SceneLegacyv4.hpp  ScriptLegacyv4.cpp  ScriptLegacyv4.hpp
RSDKv5/RSDK/Storage/: Storage.cpp  Storage.hpp  Text.cpp  Text.hpp
RSDKv5/RSDK/Storage/Legacy/: TextLegacy.cpp  TextLegacy.hpp  UserStorageLegacy.cpp  UserStorageLegacy.hpp
RSDKv5/RSDK/User/Core/: UserAchievements.hpp  UserCore.cpp  UserCore.hpp  UserLeaderboards.hpp  UserPresence.hpp  UserStats.hpp  UserStorage.cpp  UserStorage.hpp
RSDKv5/RSDK/User/Dummy/: DummyAchievements.cpp  DummyAchievements.hpp  DummyCore.cpp  DummyCore.hpp  DummyLeaderboards.cpp  DummyLeaderboards.hpp
dependencies/all/iniparser/: iniparser.cpp
dependencies/mac/: .gitignore  SDL2_cocoawindow.patch  SDL3_cocoawindow.patch  cocoaHelpers.hpp  cocoaHelpers.mm
